# speedpay-test

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  manage.py  pyproject.toml
.github/workflows/: deploy.yml
api/: admin.py  auth.py  exceptions.py  middleware.py  models.py  schemas.py
api/migrations/: 0001_initial.py
api/routes/: __init__.py  account.py  admin.py  auth.py  webhooks.py
api/tests/: conftest.py  test_account.py  test_admin.py  test_auth.py  test_webhooks.py
infra/: README.md  stack.yml
scripts/: entrypoint.sh  make-secrets.sh  runmigrations.sh  setup.sh
speedpay/: asgi.py  settings.py  urls.py  wsgi.py
