[project]
name = "speedpay"
version = "0.1.0"
description = "Digital wallet API"
requires-python = ">=3.13"
dependencies = [
    "django[argon2]==6.0.6",
    "django-ninja==1.6.2",
    "python-dotenv==1.2.2",
    "psycopg[binary]==3.3.4",
    "dj-database-url==3.1.2",
    "uvicorn[standard]==0.49.0",
    "pyjwt==2.13.0",
    "pydantic==2.13.4",
    "paystack-api-wrapper==2",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-django==4.12.0",
    "black==26.5.1",
    "coverage==7.14.1",
    "isort==8.0.1",
    "ruff==0.15.17",
    "mypy==2.1.0",
    "responses==0.26.1",
    "vulture==2.16",
    "yamllint==1.38.0",
    "moto==5.2.2",
    "pylint==4.0.6",
    "django-stubs==6.0.5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "speedpay.settings"
python_files = ["test_*.py"]
testpaths = ["api/tests"]
addopts = ["--tb=short", "-p", "no:cacheprovider"]

[tool.mypy]
plugins = ["django_stubs"]
python_version = "3.13"
ignore_missing_imports = true
follow_imports = "silent"
